修改安卓配置文件AndroidManifest.xml <data     android:scheme=xmusic     android:host=oauth     android:path=/callback/>

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -52,7 +52,9 @@
                 <category
                     android:name="android.intent.category.BROWSABLE"/>
                 <data
-                    android:scheme="xmusic"/>
+                    android:scheme="xmusic"
+                    android:host="oauth"
+                    android:path="/callback"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
