--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -26,6 +26,24 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Setup signing config
+        run: |
+          # Create key.properties file from secrets
+          cat > android/key.properties << EOF
+          storePassword=${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword=${{ secrets.KEY_PASSWORD }}
+          keyAlias=${{ secrets.KEY_ALIAS }}
+          storeFile=../upload-keystore.jks
+          EOF
+
+          # Decode and save keystore file
+          if [ -n "${{ secrets.KEYSTORE_BASE64 }}" ]; then
+            echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/upload-keystore.jks
+            echo "✅ Keystore file created"
+          else
+            echo "⚠️ KEYSTORE_BASE64 secret not found, will use debug signing"
+          fi
+
       - name: Fix flutter_dynamic_icon issues
         run: |
           PLUGIN_DIR="${HOME}/.pub-cache/hosted/pub.dev/flutter_dynamic_icon-2.1.0/android"
