--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,14 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# CI 环境优化配置
+org.gradle.daemon=false
+org.gradle.parallel=false
+org.gradle.configureondemand=false
+org.gradle.caching=false
+
+# Kotlin 编译器配置
+kotlin.compiler.execution.strategy=in-process
+kotlin.daemon.enabled=false
+kotlin.incremental=false
