--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -12,3 +12,6 @@ org.gradle.caching=false
 kotlin.compiler.execution.strategy=in-process
 kotlin.daemon.enabled=false
 kotlin.incremental=false
+
+# 禁用文件系统监视（修复 "Already watching path" 错误）
+org.gradle.vfs.watch=false
