--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -92,10 +92,15 @@ jobs:
           ls -la build/app/outputs/ || echo "outputs directory not found"
           ls -la build/app/outputs/flutter-apk/ || echo "flutter-apk directory not found"
           ls -la build/app/outputs/apk/ || echo "apk directory not found"
-          find build -name "*.apk" || echo "No APK files found"
+          ls -la build/app/outputs/apk/release/ || echo "apk/release directory not found"
+          echo "Searching for all APK files:"
+          find build -name "*.apk" -type f || echo "No APK files found"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: app-release
-          path: build/app/outputs/flutter-apk/app-release.apk
+          path: |
+            build/app/outputs/flutter-apk/app-release.apk
+            build/app/outputs/apk/release/app-release.apk
+            build/app/outputs/apk/release/*.apk
