--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -59,8 +59,50 @@ jobs:
             # Install node-forge
             npm install node-forge
             
-            # Generate keystore using gen_keystore.js
-            node gen_keystore.js
+            # Use inline Node.js script with node-forge to generate a PKCS#12 keystore
+            node - << 'EOF'
+          const fs = require('fs');
+          const forge = require('node-forge');
+
+          const alias = 'upload';
+          const password = '123456';
+          const cn = 'Example User';
+          const o = 'MyCompany';
+          const c = 'CN';
+
+          const keys = forge.pki.rsa.generateKeyPair(2048);
+
+          const cert = forge.pki.createCertificate();
+          cert.publicKey = keys.publicKey;
+          cert.serialNumber = '01';
+          cert.validity.notBefore = new Date();
+          cert.validity.notAfter = new Date();
+          cert.validity.notAfter.setFullYear(cert.validity.notBefore.getFullYear() + 25);
+
+          const attrs = [
+            { name: 'commonName', value: cn },
+            { name: 'organizationName', value: o },
+            { name: 'countryName', value: c },
+          ];
+
+          cert.setSubject(attrs);
+          cert.setIssuer(attrs);
+          cert.sign(keys.privateKey);
+
+          const p12Asn1 = forge.pkcs12.toPkcs12Asn1(
+            keys.privateKey,
+            cert,
+            password,
+            { generateLocalKeyId: true, friendlyName: alias },
+          );
+
+          const p12Der = forge.asn1.toDer(p12Asn1).getBytes();
+          const p12Buffer = Buffer.from(p12Der, 'binary');
+
+          fs.writeFileSync('upload-keystore.p12', p12Buffer);
+
+          console.log('生成成功：upload-keystore.p12');
+          EOF
             
             # Move generated keystore to android folder
             mv upload-keystore.p12 android/upload-keystore.jks
