--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -15,3 +15,7 @@ kotlin.incremental=false
 
 # 禁用文件系统监视（修复 "Already watching path" 错误）
 org.gradle.vfs.watch=false
+
+# 防止 Gradle 自动升级插件版本
+android.overrideVersionCheck=true
+android.suppressUnsupportedCompileSdk=34,35,36
