--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,6 +3,14 @@ workflows:
     name: Android Workflow
     max_build_duration: 120
     instance_type: mac_mini_m1
+    triggering:
+      events:
+        - push
+        - tag
+        - pull_request
+      branch_patterns:
+        - pattern: "*"
+          include: true
     environment:
       android_signing:
         - keystore_reference
@@ -10,7 +18,11 @@ workflows:
         - google_play
       vars:
         PACKAGE_NAME: "com.dsnbc.xmusic"
-      flutter: stable
+        # 禁用 Gradle 自动升级
+        GRADLE_OPTS: "-Dorg.gradle.project.android.overrideVersionCheck=true"
+        # 防止 Flutter 工具自动升级 Gradle
+        FLUTTER_GRADLE_PLUGIN_APPLY_KOTLIN_VERSION: "false"
+      flutter: 3.24.5
       xcode: latest
       cocoapods: default
     scripts:
@@ -20,16 +32,43 @@ workflows:
       - name: Get Flutter packages
         script: |
           flutter packages pub get
+      - name: Check Gradle Configuration
+        script: |
+          # 检查当前 Gradle 配置
+          cd android
+          echo "=== Current Gradle Configuration ==="
+          echo "Gradle wrapper version:"
+          cat gradle/wrapper/gradle-wrapper.properties | grep distributionUrl
+          echo "Android Gradle Plugin version:"
+          cat settings.gradle.kts | grep "com.android.application"
       - name: Flutter analyze
         script: |
           flutter analyze
+        ignore_failure: true
       - name: Flutter unit tests
         script: |
           flutter test
         ignore_failure: true
       - name: Build APK with Flutter
         script: |
-          flutter build apk --release
+          # 在构建前，强制恢复正确的 Gradle 版本
+          cd android
+
+          # 强制设置正确的 AGP 版本
+          sed -i.bak 's/id("com.android.application") version "[^"]*"/id("com.android.application") version "8.7.2"/g' settings.gradle.kts
+          sed -i.bak 's/id("org.jetbrains.kotlin.android") version "[^"]*"/id("org.jetbrains.kotlin.android") version "2.0.21"/g' settings.gradle.kts
+
+          # 强制设置正确的 Gradle wrapper 版本
+          sed -i.bak 's|distributionUrl=.*|distributionUrl=https\\://services.gradle.org/distributions/gradle-8.9-all.zip|g' gradle/wrapper/gradle-wrapper.properties
+
+          echo "=== Forced Gradle Configuration ==="
+          cat settings.gradle.kts | grep "com.android.application"
+          cat gradle/wrapper/gradle-wrapper.properties | grep distributionUrl
+
+          cd ..
+
+          # 使用 Flutter 命令构建，避免直接调用 Gradle
+          flutter build apk --release --no-tree-shake-icons
     artifacts:
       - build/**/outputs/**/*.apk
       - build/**/outputs/**/*.aab
