--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,6 @@ org.gradle.vfs.watch=false
 # 防止 Gradle 自动升级插件版本
 android.overrideVersionCheck=true
 android.suppressUnsupportedCompileSdk=34,35,36
+
+# Java 工具链版本（确保使用 Java 17）
+# org.gradle.java.home 会在 CI 环境中通过 JAVA_HOME 环境变量设置
