--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,5 +20,7 @@ org.gradle.vfs.watch=false
 android.overrideVersionCheck=true
 android.suppressUnsupportedCompileSdk=34,35,36
 
-# Java 工具链版本（确保使用 Java 17）
-# org.gradle.java.home 会在 CI 环境中通过 JAVA_HOME 环境变量设置
+# 强制 Java 17 工具链
+kotlin.jvm.target.validation.mode=warning
+org.gradle.java.installations.auto-detect=false
+org.gradle.java.installations.auto-download=false
